--- a/tox.ini
+++ b/tox.ini
@@ -17,10 +17,7 @@ deps =
   freezegun
 
 commands = 
-    py.test --pep8 --flakes {posargs} helga-queue
-
-# always recreate the venv
-recreate = True
+    py.test -vv -s --pep8 --flakes {posargs} helga_queue/tests/
 
 [testenv:docs]
 # this really just makes sure README.rst will parse on pypi
@@ -35,4 +32,4 @@ commands =
 # this runs coverage report
 basepython = python2.7
 commands = 
-    py.test --cov-report term-missing --cov-report xml --cov-report html --cov-config {toxinidir}/.coveragerc --cov=helga-queue {posargs}
+    py.test --cov-report term-missing --cov-report xml --cov-report html --cov-config {toxinidir}/.coveragerc --cov=helga_queue {posargs} helga_queue/tests/
